--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   flutter_speed_dial: ^6.0.0
+  sqflite: ^2.0.2+1
+  flutter_material_color_picker: ^1.1.0+2
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
